--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -18,3 +18,7 @@ label_deal_type=тип сделки
 label_deal_quantity=количество
 label_deal_amount=сумма
 label_deal_create_date=дата создания
+
+label_language_us=английский
+label_language_ru=русский
+label_language=язык
