--- a/src/main/resources/locale/messages_us.properties
+++ b/src/main/resources/locale/messages_us.properties
@@ -19,3 +19,8 @@ label_deal_type=type
 label_deal_quantity=quantity
 label_deal_amount=amount
 label_deal_create_date=create date
+
+label_language_us=english
+label_language_ru=russian
+label_language=language
+
