--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -1,4 +1,4 @@
-﻿label_login=Логин
+﻿label_username=Логин
 label_password=Пароль
 label_sing_in=Вход
 label_remember=Запомнить меня
@@ -18,6 +18,8 @@ label_deal_type=тип сделки
 label_deal_quantity=количество
 label_deal_amount=сумма
 label_deal_create_date=дата создания
+
+label_error=неверное имя или пароль
 
 label_language_us=английский
 label_language_ru=русский
