--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -1,4 +1,4 @@
-label_login=login
+label_username=login
 label_password=password
 label_sing_in=sing in
 label_remember=remember me
@@ -19,6 +19,8 @@ label_deal_type=type
 label_deal_quantity=quantity
 label_deal_amount=amount
 label_deal_create_date=create date
+
+label_error=Invalid user or password
 
 label_language_us=english
 label_language_ru=russian
